# SD-voice-ai-service

./: .env.example  .gitignore  pyproject.toml  requirements.txt
scripts/: make_call.py  seed_db.py
src/: __init__.py  agent.py  api_server.py  config.py  db.py  logging_config.py
src/api/: calls.py  middleware.py  reviews.py  specialists.py
src/schemas/: call.py  extraction.py  review.py  specialist.py
src/services/: call_orchestrator.py  conversation_manager.py  data_extraction.py  review_service.py
src/workers/: call_scheduler.py  data_processor.py
supabase/migrations/: 001_initial_schema.sql
