[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sd-voice-ai-service"
version = "0.1.0"
description = "Voice AI system for healthcare specialist directory verification calls"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    # ── LiveKit Agents Framework ──
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",

    # ── AI Model Plugins (STT / LLM / TTS) ──
    "livekit-plugins-deepgram~=1.0",
    "livekit-plugins-openai~=1.0",
    "livekit-plugins-elevenlabs~=1.0",
    "livekit-plugins-anthropic~=1.0",

    # ── Web Framework ──
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",

    # ── Database (Supabase) ──
    "supabase>=2.11.0,<3.0",

    # ── Message Queue ──
    "redis[hiredis]>=5.2.0,<6.0",

    # ── Data Validation ──
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",

    # ── HTTP Client ──
    "httpx>=0.28.0,<1.0",

    # ── Logging ──
    "structlog>=24.4.0",

    # ── Environment ──
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.22.0",         # mock httpx requests
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
